# analytics-okf

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: er-diagram.md
data/raw/: currencyexchange.csv  date.csv
src/: cli.py
src/agent/: core.py
src/data_pipeline/: __init__.py  build_db.py  download.py
src/okf/: __init__.py
