[project]
name = "analytics-okf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "jupysql>=0.11.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "toml>=0.10.2",
]
